--- a/src/app/assistance/admin-assistance/admin-assistance.component.html
+++ b/src/app/assistance/admin-assistance/admin-assistance.component.html
@@ -1,4 +1,5 @@
 <nz-table #basicTable
+          [nzLoading]="isLoading"
           [nzPageIndex]="pageIndex"
           [nzPageSize]="pageSize"
           [nzData]="listOfAssistanceRecord">
@@ -7,8 +8,8 @@
     <th>No.</th>
     <th>Assistance ID</th>
     <th>Issue Title</th>
-    <th>Applicant</th>
-    <th>Person-In-Charge</th>
+    <th>Help-seeker Name</th>
+    <th>Admin-In-Charge</th>
     <th>Status</th>
     <th>Action</th>
   </tr>
@@ -16,13 +17,19 @@
   <tbody>
   <tr *ngFor="let record of basicTable.data; let i = index">
     <td>{{ (pageIndex - 1) * pageSize + i + 1 }}</td>
-    <td>{{ record.assistanceId }}</td>
-    <td>{{ record.issueTitle }}</td>
-    <td>{{ record.applicantName }}</td>
-    <td>{{ record.adminName }}</td>
-    <td>{{ record.status }}</td>
+    <td>{{ record?.assistanceId || "-" }}</td>
+    <td>{{ record?.assistanceTitle || "-" }}</td>
+    <td>{{ record?.userFullName || "-" }}</td>
+    <td>{{ record?.adminFullName || "-" }}</td>
     <td>
-      <a [routerLink]="['/assistance-record']" [queryParams]="{assistanceId: record.assistanceId}">View</a>
+      <nz-tag *ngIf="record?.status === 'pending'" nzColor="gold">Pending</nz-tag>
+      <nz-tag *ngIf="record?.status === 'processing'" nzColor="blue">Processing</nz-tag>
+      <nz-tag *ngIf="record?.status === 'completed'" nzColor="green">Completed</nz-tag>
+      <nz-tag *ngIf="record?.status === 'cancelled'" nzColor="magenta">Cancel</nz-tag>
+      <span *ngIf="!record?.status">-</span>
+    </td>
+    <td>
+      <a [routerLink]="['/assistance/detail']" [queryParams]="{assistanceId: record?.assistanceId}">View</a>
     </td>
   </tr>
   </tbody>
