Display post medias, update add & delete API to return ResponseModel

--- a/src/app/shared/components/new-post-modal/new-post-modal.component.html
+++ b/src/app/shared/components/new-post-modal/new-post-modal.component.html
@@ -9,9 +9,9 @@
 
       <nz-form-item>
         <nz-form-control>
-<!--          <nz-upload [(nzFileList)]="fileList" [nzBeforeUpload]="beforeUpload">-->
-<!--            <button nz-button><i nz-icon nzType="upload"></i>Select File</button>-->
-<!--          </nz-upload>-->
+          <nz-upload [(nzFileList)]="fileList" [nzBeforeUpload]="beforeUpload">
+            <button nz-button><i nz-icon nzType="upload"></i>Select File</button>
+          </nz-upload>
         </nz-form-control>
       </nz-form-item>
     </form>
