--- a/src/app/homepage/homepage/homepage.component.html
+++ b/src/app/homepage/homepage/homepage.component.html
@@ -11,4 +11,4 @@
   <button nz-button *ngIf="nzSelectedIndex === 1 && isAdminLoggedIn" (click)="openNewPostModal()">Create New Post</button>
 </ng-template>
 
-<app-new-post-modal [isVisible]="newPostModalIsVisible" (modalIsVisibleEmitter)="modalVisibleHasChange($event)" (addNewPostEmitter)="postListHasChanges($event)"></app-new-post-modal>
+<app-new-post-modal *ngIf="newPostModalIsVisible" [isVisible]="newPostModalIsVisible" (modalIsVisibleEmitter)="modalVisibleHasChange($event)" (addNewPostEmitter)="postListHasChanges($event)"></app-new-post-modal>
