Update password & confirm Password validation, disable next & submit button if signup's child form is not valid

--- a/src/app/user/reset-password/reset-password.component.html
+++ b/src/app/user/reset-password/reset-password.component.html
@@ -39,7 +39,7 @@
     <nz-form-label [nzSm]="6" [nzXs]="24" class="fw-bold">Password</nz-form-label>
     <nz-form-control [nzErrorTip]="passwordErrorTpl">
       <nz-input-group>
-        <input [type]="passwordIsVisible ? 'text' : 'password'" nz-input formControlName="password"/>
+        <input [type]="passwordIsVisible ? 'text' : 'password'" nz-input formControlName="password" (ngModelChange)="matchPassword()"/>
         <ng-template #passwordErrorTpl let-control>
           <ng-container *ngIf="control.hasError('required')">
             Please input your password!
@@ -53,7 +53,7 @@
     <nz-form-label [nzSm]="6" [nzXs]="24" class="fw-bold">Confirm Password</nz-form-label>
     <nz-form-control [nzErrorTip]="confirmPasswordErrorTpl">
       <nz-input-group>
-        <input [type]="passwordIsVisible ? 'text' : 'password'" nz-input formControlName="confirmPassword"/>
+        <input [type]="passwordIsVisible ? 'text' : 'password'" nz-input formControlName="confirmPassword" (ngModelChange)="matchPassword()"/>
         <ng-template #confirmPasswordErrorTpl let-control>
           <ng-container *ngIf="control.hasError('required')">
             Please input your password!
