--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form">
 
-  <nz-steps nzProgressDot [nzCurrent]="stepIndex" (nzIndexChange)="movePage($event)">
+  <nz-steps nzProgressDot [nzCurrent]="stepIndex">
     <nz-step nzTitle="Info"></nz-step>
     <nz-step nzTitle="Personal Details"></nz-step>
     <nz-step nzTitle="Address"></nz-step>
@@ -24,8 +24,8 @@
       <button *ngIf="stepIndex === 4" nz-button nzType="default" (click)="addDiseaseFormGroup()">Add Disease</button>
     </nz-col>
     <nz-col [nzSpan]="8">
-      <button nz-button nzType="primary" class="float-end me-2" *ngIf="stepIndex !== 4" (click)="movePage(this.stepIndex + 1)">Next</button>
-      <button nz-button nzType="primary" class="float-end" *ngIf="stepIndex === 4" (click)="submitForm()">Register</button>
+      <button nz-button nzType="primary" class="float-end me-2" *ngIf="stepIndex !== 4" [disabled]="!formIsValid()" (click)="movePage(this.stepIndex + 1)">Next</button>
+      <button nz-button nzType="primary" class="float-end" *ngIf="stepIndex === 4" [disabled]="!formIsValid()" (click)="submitForm()">Register</button>
     </nz-col>
   </nz-row>
 
